functionality reqs met

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Didact+Gothic&display=swap" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="sweetalert2.min.css"> -->
   <link rel="stylesheet" href="assets/style.css" />
   <title>TaskMaster</title>
 </head>
@@ -38,10 +39,6 @@
                 <div class="form-group">
                   <label for="task-title" name="title" class="col-form-label">List Name:</label>
                   <input type="text" class="form-control" id="title">
-                </div>
-                <div class="form-group">
-                  <label for="task" name="task" class="col-form-label">Task:</label>
-                  <input type="text" class="form-control" id="task">
                 </div>
                 <button type="submit" class="btn btn-primary">Add List</button>
               </form>
@@ -86,6 +83,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+  <!-- <script src="sweetalert2.all.min.js"></script> -->
   <script src="app/main.js" type="module"></script>
 
 </body>
