--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <form onsubmit="app.listController.addList(event)">
                 <div class="form-group">
                   <label for="task-title" name="title" class="col-form-label">List Name:</label>
-                  <input type="text" class="form-control" id="title">
+                  <input type="text" class="form-control" id="title" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Add List</button>
               </form>
@@ -62,13 +62,6 @@
     <div class="row task-area" id="task-area">
 
     </div>
-
-
-
-
-
-    <div class="row">
-
 
   </main>
 
